updated kind of grass

--- a/lawn-basics/what-type-of-grass-do-i-have.html
+++ b/lawn-basics/what-type-of-grass-do-i-have.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>What Type of Grass Do I Have</title>
-  <meta name="description" content="This guide explains how to identify lawn grass by growth habit, leaf shape, texture, and seasonal behavior without lab tests or guesswork.">
+  <meta name="description" content="Lawns behave differently depending on grass type. Noticing growth patterns and seasonal changes makes identification clearer over time.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="What Type of Grass Do I Have">
-  <meta property="og:description" content="This guide explains how to identify lawn grass by growth habit, leaf shape, texture, and seasonal behavior without lab tests or guesswork.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="What Type of Grass Do I Have">
+  <meta name="twitter:description" content="Lawns behave differently depending on grass type. Noticing growth patterns and seasonal changes makes identification clearer over time.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="What Type of Grass Do I Have">
+  <meta property="og:description" content="Lawns behave differently depending on grass type. Noticing growth patterns and seasonal changes makes identification clearer over time.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,52 +45,38 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>What Type of Grass Do I Have</h1>
-<h2>Why Grass Identification Matters</h2>
-<p>Grass type determines mowing height, watering demand, and seasonal performance. Treating all lawns the same causes stress and slow decline.</p>
-<p>Correct identification prevents wasted effort. It aligns care with how the grass actually grows and recovers.</p>
-<h2>Growth Habit Is the First Clue</h2>
-<p>Some grasses spread sideways using runners above or below ground. Others grow in tight clumps that never creep.</p>
-<p>Spreading lawns repair damage faster. Clumping lawns stay patchy unless overseeded.</p>
-<h2>Blade Shape and Texture</h2>
-<p>Blade width ranges from hair-thin to coarse and wide. Texture stays consistent even when stressed.</p>
-<p>Run fingers across the leaf. Roughness, stiffness, and sharp edges narrow the options quickly.</p>
-<h2>Color and Seasonal Changes</h2>
-<p>Some grasses stay green through heat. Others fade or go dormant to survive stress.</p>
-<p>Winter color loss often signals warm-season types. Summer burn points to cool-season grass.</p>
-<h2>How the Lawn Responds to Mowing</h2>
-<p>Low mowing favors certain grasses and damages others. Recovery speed after cutting is a strong indicator.</p>
-<p>Scalping tolerance varies. Slow rebound suggests the grass is cut below its safe height.</p>
-<h2>Sun, Shade, and Location Behavior</h2>
-<p>Grass near trees, walls, or pavement often reveals its preferences. Consistent thinning shows incompatibility.</p>
-<p>Uniform performance across the yard suggests a well-matched species for the site.</p>
-<h2>Mixes and Overlapping Types</h2>
-<p>Many lawns contain multiple grasses. Differences appear as patches with distinct color or texture.</p>
-<p>Mixed lawns complicate care but explain uneven growth and seasonal shifts.</p>
-<h2>Confirming the Identification</h2>
-<p>Compare observed traits against known grass profiles. Focus on habit, blade, and seasonality.</p>
-<p>Photos taken across seasons help confirm conclusions without invasive testing.</p>
-</content_html>
+
+<h2>Why grass type becomes obvious over time</h2>
+<p>Most homeowners don’t know their grass type when they first move in. At first, a lawn just looks like a lawn, and everything seems fine as long as it’s green. Over time, patterns start to show.</p>
+<p>The way the lawn grows, slows down, or struggles through certain months is usually the first real clue. Grass type reveals itself through behavior, not labels.</p>
+
+<h2>How seasonal changes give it away</h2>
+<p>Some lawns thrive as soon as spring arrives and fade once summer heat settles in. Others barely wake up until warm weather and then take off quickly. Watching when your lawn looks its best tells you more than any tag ever could.</p>
+<p>These seasonal swings are consistent year after year. Once you notice them, the lawn’s preferences become hard to miss.</p>
+
+<h2>What summer stress can tell you</h2>
+<p>Summer is when mismatches between grass and climate show up clearly. Lawns that look strong in spring may thin out, fade, or stall once heat becomes constant. This often leads people to blame watering or fertilizer.</p>
+<p>In many cases, the grass is simply outside its comfort zone. <a href="why-grass-dies-in-summer.html">Why Grass Dies in Summer</a> explains why some lawns struggle even when care seems correct.</p>
+
+<h2>How soil plays a role in grass behavior</h2>
+<p>Soil type quietly shapes how grass looks and grows. Lawns on dense or heavy soil often behave differently than those on loose ground. Growth may be slower, uneven, or more sensitive to moisture changes.</p>
+<p>This can make grass seem stubborn or difficult when it’s really responding to what’s beneath it. <a href="can-grass-grow-on-clay-soil.html">Can Grass Grow on Clay Soil</a> explains how soil influences what thrives.</p>
+
+<h2>Why copying neighbors rarely works</h2>
+<p>It’s common to compare lawns on the same street and wonder why one looks better than another. Even nearby yards can behave very differently despite similar care. Grass type is often the missing piece.</p>
+<p>Using the same treatments without matching grass type leads to frustration. What works next door may quietly backfire in your yard.</p>
+
+<h2>How small mistakes compound confusion</h2>
+<p>When grass struggles, it’s tempting to try multiple fixes at once. Extra watering, different products, or more frequent mowing often get layered on quickly. This makes it harder to see what the lawn actually needs.</p>
+<p>Some responses unintentionally make problems worse. <a href="weeds-pests/mistakes-that-make-lawn-problems-worse.html">Mistakes That Make Lawn Problems Worse</a> shows how well-meaning fixes can cloud the picture.</p>
+
+<h2>Why identifying grass type simplifies everything</h2>
+<p>Once you understand what type of grass you have, care decisions stop feeling like guesses. Growth patterns, seasonal slowdowns, and texture changes start to make sense. The lawn becomes more predictable.</p>
+<p>Matching expectations to grass type removes a lot of unnecessary effort. Instead of fighting the yard, you work with it.</p>
   </main>
 
   <footer class="site-footer">
@@ -93,12 +84,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
