updated uneven growth page

--- a/lawn-basics/why-grass-grows-unevenly.html
+++ b/lawn-basics/why-grass-grows-unevenly.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Grows Unevenly</title>
-  <meta name="description" content="Grass grows unevenly due to differences in soil structure, moisture, light, root competition, and microclimate conditions across a lawn.">
+  <meta name="description" content="Uneven grass growth is common and usually gradual. Understanding why it happens helps decide when to adjust care and when to stop fighting it.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Why Grass Grows Unevenly">
-  <meta property="og:description" content="Grass grows unevenly due to differences in soil structure, moisture, light, root competition, and microclimate conditions across a lawn.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Why Grass Grows Unevenly">
+  <meta name="twitter:description" content="Uneven grass growth is common and usually gradual. Understanding why it happens helps decide when to adjust care and when to stop fighting it.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Why Grass Grows Unevenly">
+  <meta property="og:description" content="Uneven grass growth is common and usually gradual. Understanding why it happens helps decide when to adjust care and when to stop fighting it.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,76 +45,38 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Why Grass Grows Unevenly</h1>
 
-<h2>Uneven growth is the normal baseline</h2>
-<p>Lawns appear uniform from a distance, but the underlying environment is rarely consistent. Soil depth, texture, and compaction vary within short distances.</p>
-<p>Grass responds directly to these differences. Growth accelerates where conditions are favorable and slows where they are limiting.</p>
-<p>Uneven growth reflects environmental reality rather than poor maintenance.</p>
+<h2>How uneven growth slowly becomes noticeable</h2>
+<p>Most lawns don’t become uneven overnight. It usually starts with small differences that are easy to ignore, like one area needing mowing sooner than the rest. Over time, those differences become more obvious and harder to overlook.</p>
+<p>The yard begins to look patchy or inconsistent even when care hasn’t changed. Uneven growth is usually the result of small, repeating conditions rather than one clear mistake.</p>
 
-<h2>Soil variability and root development</h2>
-<p>Roots grow deeper in loose, well-aerated soil and remain shallow in compacted zones.</p>
-<p>Deeper roots access more water and nutrients, supporting faster blade production.</p>
-<p>Shallow-rooted areas lag even when surface conditions appear similar.</p>
+<h2>Why some areas always seem ahead</h2>
+<p>In almost every yard, a few spots grow faster and thicker than others. These areas tend to get more sun, more water, or less foot traffic. The grass there stays upright and fills in quickly.</p>
+<p>Meanwhile, slower areas struggle to keep up and fall behind visually. This contrast makes the lawn feel unbalanced even when nothing is technically wrong.</p>
 
-<h2>Light distribution effects</h2>
-<p>Sun exposure drives photosynthesis directly.</p>
-<p>Areas receiving more light warm earlier and grow faster.</p>
-<p>Partial shade reduces carbohydrate production, slowing regrowth.</p>
+<h2>How texture changes make unevenness stand out</h2>
+<p>As grass ages or reacts to conditions, its texture often changes. Some sections may feel soft and full while others become thin or coarse. These texture shifts exaggerate uneven growth.</p>
+<p>The lawn can look like it’s made of different grasses even when it isn’t. <a href="why-grass-changes-texture-over-time.html">Why Grass Changes Texture Over Time</a> explains how this happens gradually.</p>
 
-<h2>Water movement and infiltration</h2>
-<p>Water does not distribute evenly across soil.</p>
-<p>Slopes shed moisture while low spots retain it.</p>
-<p>Both extremes affect root oxygen availability and growth rate.</p>
+<h2>Why mowing makes uneven growth more obvious</h2>
+<p>Mowing doesn’t cause uneven growth, but it highlights it. Faster-growing areas stand taller between cuts, while slower sections barely change. After mowing, the differences show up again within days.</p>
+<p>This cycle makes it feel like the lawn never stays even for long. The mower reveals patterns that were already there.</p>
 
-<h2>Root competition from trees and shrubs</h2>
-<p>Woody plants extract water aggressively.</p>
-<p>Grass roots near trees operate under chronic resource limitation.</p>
-<p>This results in thinner, slower-growing turf.</p>
+<h2>When uneven growth turns into decline</h2>
+<p>Sometimes uneven growth is just cosmetic. Other times it signals that parts of the lawn are slowly failing. Areas that thin year after year rarely recover on their own.</p>
+<p>At a certain point, effort stops paying off. <a href="when-grass-is-beyond-saving.html">When Grass Is Beyond Saving</a> explains how to recognize that line.</p>
 
-<h2>Compaction from traffic patterns</h2>
-<p>Foot traffic compresses soil along consistent paths.</p>
-<p>Compaction reduces pore space and limits root respiration.</p>
-<p>Growth slows where oxygen exchange is restricted.</p>
+<h2>Why chasing perfect uniformity backfires</h2>
+<p>Trying to force every part of the lawn to grow the same often leads to frustration. Extra watering, repeated treatments, and constant adjustments usually don’t fix the root of the issue. They just mask it briefly.</p>
+<p>Accepting some variation keeps maintenance realistic. A lawn that grows unevenly can still be healthy and usable.</p>
 
-<h2>Microclimates within a yard</h2>
-<p>Fences, buildings, and slopes alter airflow and heat retention.</p>
-<p>These microclimates change evaporation rates and soil temperature.</p>
-<p>Grass adapts locally, creating uneven growth rates.</p>
-
-<h2>Mowing amplification effects</h2>
-<p>Fast-growing areas recover quicker after mowing.</p>
-<p>Slow areas appear scalped even at the same cut height.</p>
-<p>Mowing exaggerates existing growth differences.</p>
-
-<h2>Diagnosing uneven growth</h2>
-<p>Persistent patterns usually reflect soil or light issues.</p>
-<p>Recent changes point to irrigation or compaction causes.</p>
-<p>Uniform solutions rarely correct localized constraints.</p>
-
-<h2>Conclusion</h2>
-<p>Uneven growth is a response to uneven conditions.</p>
-<p>Understanding the limiting factor explains the pattern better than chasing uniformity.</p>
+<h2>What consistent care actually improves</h2>
+<p>While uneven growth may never disappear completely, steady care prevents it from getting worse. Keeping mowing height consistent and avoiding extremes helps the lawn stay balanced overall.</p>
+<p>The goal isn’t perfection but stability. A lawn that holds together over time is easier to live with than one constantly being corrected.</p>
   </main>
 
   <footer class="site-footer">
@@ -117,12 +84,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
