updated browns page

--- a/lawn-basics/why-grass-turns-brown.html
+++ b/lawn-basics/why-grass-turns-brown.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Turns Brown</title>
-  <meta name="description" content="Grass turns brown when physiological stress progresses beyond pigment loss into tissue shutdown, dormancy, or death, depending on severity and duration.">
+  <meta name="description" content="Grass rarely turns brown all at once. It usually fades in stages, and what you notice first helps explain what the lawn is reacting to.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Why Grass Turns Brown">
-  <meta property="og:description" content="Grass turns brown when physiological stress progresses beyond pigment loss into tissue shutdown, dormancy, or death, depending on severity and duration.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Why Grass Turns Brown">
+  <meta name="twitter:description" content="Grass rarely turns brown all at once. It usually fades in stages, and what you notice first helps explain what the lawn is reacting to.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Why Grass Turns Brown">
+  <meta property="og:description" content="Grass rarely turns brown all at once. It usually fades in stages, and what you notice first helps explain what the lawn is reacting to.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,76 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Why Grass Turns Brown</h1>
 
-<h2>What brown grass biologically represents</h2>
-<p>Brown grass indicates that active photosynthesis has largely stopped. Unlike yellowing, which reflects reduced chlorophyll, browning occurs when leaf tissue dries, collapses, or is intentionally abandoned by the plant.</p>
-<p>This does not automatically mean the grass is dead. In many cases, browning is a survival response where the plant sacrifices leaf tissue to protect the crown and roots.</p>
-<p>The critical distinction is whether browning is part of dormancy or the result of structural failure.</p>
+<h2>How browning usually starts</h2>
+<p>Grass rarely turns brown evenly across the whole yard. It usually begins in patches, along edges, or in areas that already looked a little weaker. At first the color just dulls, and it’s easy to assume it will fix itself.</p>
+<p>As days pass, those faded spots deepen in color and spread. That slow change is the lawn reacting to something that’s been building for a while.</p>
 
-<h2>Severe water deficit and tissue dehydration</h2>
-<p>Extended drought causes cells to lose water faster than they can replenish it. Once dehydration crosses a threshold, leaf tissue cannot maintain structure and turns brown.</p>
-<p>Grass responds by shutting down leaf metabolism to reduce water loss. The crown remains alive if dehydration is not prolonged.</p>
-<p>This type of browning often appears uniform across exposed areas and coincides with high temperatures and low humidity.</p>
+<h2>Why watering habits matter more than timing</h2>
+<p>When grass turns brown, watering is often the first thing people question. Sometimes the lawn hasn’t been getting enough moisture, but just as often it’s been watered in a way that doesn’t help long term. The surface looks wet while the grass still struggles.</p>
+<p>How water is applied shapes how the lawn holds up between waterings. <a href="watering-irrigation/how-watering-affects-root-depth.html">How Watering Affects Root Depth</a> explains why shallow watering leads to faster browning.</p>
 
-<h2>Dormancy as a protective mechanism</h2>
-<p>Many grasses enter dormancy under extreme heat or cold. Dormant grass turns brown because chlorophyll production stops and leaves senesce.</p>
-<p>The crown remains viable, storing carbohydrates until conditions improve.</p>
-<p>Dormant browning is reversible, but recovery depends on how long dormancy lasts and whether the crown stays hydrated.</p>
+<h2>How texture changes signal trouble early</h2>
+<p>Before grass turns fully brown, its texture often changes. Blades may feel thinner, stiffer, or uneven underfoot. These changes usually show up before color loss becomes obvious.</p>
+<p>Ignoring texture shifts makes browning feel sudden later. <a href="why-grass-changes-texture-over-time.html">Why Grass Changes Texture Over Time</a> explains how these early signals develop.</p>
 
-<h2>Root failure and vascular shutdown</h2>
-<p>When roots are damaged by compaction, overwatering, or disease, water transport to leaves collapses.</p>
-<p>Leaf tissue dries even when soil moisture is present, producing browning that does not reverse quickly.</p>
-<p>This form of browning often spreads in irregular patches.</p>
+<h2>Why thin lawns brown faster</h2>
+<p>Thin lawns don’t have much margin when conditions get tough. Heat, dry spells, or foot traffic affect them sooner and more visibly. Browning shows up quickly because there’s less coverage to hide stress.</p>
+<p>Thickening the lawn improves how it handles stress overall. <a href="how-to-thicken-a-thin-lawn.html">How to Thicken a Thin Lawn</a> explains why density matters so much.</p>
 
-<h2>Mowing-related browning</h2>
-<p>Scalping removes most photosynthetic tissue and exposes crowns to heat and desiccation.</p>
-<p>Repeated low cuts exhaust carbohydrate reserves, preventing leaf regeneration.</p>
-<p>Browning after mowing often follows a sharp, uneven pattern tied to mower height.</p>
+<h2>Why browning doesn’t always mean the lawn is gone</h2>
+<p>Brown grass often looks worse than it really is. Many lawns fade to protect themselves and recover once conditions improve. The timing and pattern of browning usually tell that story.</p>
+<p>Panic responses often cause more harm than the browning itself. Letting the lawn settle before reacting prevents unnecessary damage.</p>
 
-<h2>Disease and pest involvement</h2>
-<p>Pathogens disrupt water transport or destroy leaf tissue directly.</p>
-<p>Root diseases cause browning through indirect dehydration, while foliar diseases damage tissue outright.</p>
-<p>Progressive spread and defined margins often distinguish biological causes from environmental stress.</p>
-
-<h2>Environmental heat loading</h2>
-<p>Surfaces such as pavement raise soil temperatures beyond tolerance levels.</p>
-<p>Root enzymes fail at high temperatures, cutting off water flow even in moist soil.</p>
-<p>Browning near hardscapes is common under these conditions.</p>
-
-<h2>How browning patterns differ by cause</h2>
-<p>Uniform browning often signals dormancy or widespread drought.</p>
-<p>Patchy or expanding browning suggests root or disease issues.</p>
-<p>Timing relative to weather, mowing, or irrigation changes provides essential context.</p>
-
-<h2>Recovery expectations</h2>
-<p>Dormant grass can recover within weeks once conditions improve.</p>
-<p>Root damage recovery is slower and may require partial regrowth.</p>
-<p>Dead tissue does not recover and must be replaced.</p>
-
-<h2>Conclusion</h2>
-<p>Brown grass is not automatically dead, but it indicates advanced stress.</p>
-<p>Determining whether the crown is alive matters more than leaf color alone.</p>
+<h2>What consistent care changes over time</h2>
+<p>Lawns that brown repeatedly usually aren’t dealing with one-time problems. They’re responding to habits that slowly wear them down. Adjusting how the lawn is watered, cut, and allowed to recover changes that pattern.</p>
+<p>Grass that holds color longer doesn’t avoid stress entirely. It just has enough resilience built in to handle it without breaking down.</p>
   </main>
 
   <footer class="site-footer">
@@ -117,12 +80,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
